# omnidrive

./: Dockerfile  LICENSE  README.md  docker-compose.yml  publish.sh  pyproject.toml
omnidrive/: cli.py  web.py
omnidrive/templates/: index.html
scripts/: compile_launcher.sh
