[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "omnidrive"
version = "0.1.0"
description = "OmniDrive - Unified Virtual Disk Storage & Symlink Manager"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "jinja2>=3.0.0",
]

[project.scripts]
omnidrive = "omnidrive.cli:main"
omni = "omnidrive.cli:main"
